--- a/tasks/templates/tasks/create-task.html
+++ b/tasks/templates/tasks/create-task.html
@@ -12,7 +12,7 @@
 <form action="" method="POST">
     {% csrf_token %}
     {{ form.as_p }}
-    <input type="submit" value="Создать задачу">
+    <input type="submit" value="Отправить">
 </form>
 </div>
 {% endblock content %}
