Finish basic functional

--- a/tasks/templates/tasks/base.html
+++ b/tasks/templates/tasks/base.html
@@ -33,6 +33,15 @@
                 <li class="nav-item">
                     <a class="nav-link text-white" href="{% url 'list of tags' %}">Тэги</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link text-white" href="{% url 'generate data' %}">Сгенерировать данные</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-white" href="{% url 'save to csv' %}">Экспортировать в CSV</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-white" href="{% url 'load from csv' %}">Импортировать из CSV</a>
+                </li>
             </ul>
         </div>
     </nav>
