--- a/tasks/templates/tasks/generate-data.html
+++ b/tasks/templates/tasks/generate-data.html
@@ -1,6 +1,6 @@
 {% extends 'tasks/base.html' %}
 {% load static %}
-{% block title %}Создать задачу{% endblock %}
+{% block title %}Генерация данных{% endblock %}
 
 
 {% block content %}
