--- a/tasks/static/tasks/css/style.css
+++ b/tasks/static/tasks/css/style.css
@@ -1,3 +1,10 @@
+a.delete {
+    padding-top: 2%;
+    padding-right: 2%;
+    color: brown !important;
+    font-size: 20px !important; 
+}
+
 .card {
     margin: 6%;
     padding: 3%;
@@ -21,12 +28,13 @@
 .change-list-text {
     padding-top: 4%
 }
+
 .categories {
     text-align: center;
     padding: 5%;
 }
 
-.categories-list{
+.categories-list {
     padding-top: 2%;
     border-top: 3px solid #fff;
 }
