--- a/tasks/templates/tasks/history.html
+++ b/tasks/templates/tasks/history.html
@@ -1,5 +1,5 @@
 {% extends 'tasks/base.html' %}
-{% block title %}Категории{% endblock title %}
+{% block title %}История изменений{% endblock title %}
 {% block content %}
 
 <div class="change-list-text">
