--- a/tasks/templates/tasks/load-from-csv.html
+++ b/tasks/templates/tasks/load-from-csv.html
@@ -1,11 +1,11 @@
 {% extends 'tasks/base.html' %}
 {% load static %}
-{% block title %}Создать задачу{% endblock %}
+{% block title %}Загрузить из CSV{% endblock %}
 
 
 {% block content %}
 <div class="col-md-6 create-form">
-<form action="" method="POST">
+<form enctype="multipart/form-data" action="" method="POST">
     {% csrf_token %}
     {{ form.as_p }}
     <input type="submit" value="Отправить">
