--- a/tasks/templates/tasks/save-to-csv.html
+++ b/tasks/templates/tasks/save-to-csv.html
@@ -1,6 +1,6 @@
 {% extends 'tasks/base.html' %}
 {% load static %}
-{% block title %}Создать задачу{% endblock %}
+{% block title %}Сохранить в CVS{% endblock %}
 
 
 {% block content %}
