--- a/tasks/templates/tasks/base.html
+++ b/tasks/templates/tasks/base.html
@@ -11,18 +11,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TODO. {% block title %}{% endblock %}</title>
     <link rel="stylesheet" href={% static "tasks/css/style.css" %}>
-
-    <nav class="navbar navbar-expand-lg navbar-light bg-dark">
-        <a class="navbar-brand text-info" href="{% url 'list of all tasks' %}">TODO</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link text-white" href="{% url 'create task' %}">Создать задачу<span
-                            class="sr-only">(current)</span></a>
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+        <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link text-white" href="{% url 'create task' %}">Создать задачу</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-white" href="{% url 'list of all tasks' %}">Задачи</a>
@@ -36,11 +29,21 @@
                 <li class="nav-item">
                     <a class="nav-link text-white" href="{% url 'generate data' %}">Сгенерировать данные</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link text-white" href="{% url 'save to csv' %}">Экспортировать в CSV</a>
-                </li>
+            </ul>
+        </div>
+        <div class="mx-auto order-0">
+            <a class="navbar-brand text-info max-auto" href="{% url 'list of all tasks' %}">TODO</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".dual-collapse2">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+        </div>
+        <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
+            <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
                     <a class="nav-link text-white" href="{% url 'load from csv' %}">Импортировать из CSV</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-white" href="{% url 'save to csv' %}">Экспортировать в CSV</a>
                 </li>
             </ul>
         </div>
